made the admin event controller and event always return it's group now
